Commit Zujeily desde la pc de Nahun por problemas tecnicos

--- a/src/main/resources/templates/usuario/Retroalimentacion.html
+++ b/src/main/resources/templates/usuario/Retroalimentacion.html
@@ -20,7 +20,7 @@
               <div class="container-fluid navbar-nav">
                     <a class="nav-link colorBtn font2" th:href="@{/}">Inicio |</a>
                     <a class="nav-link colorBtn font2" th:href="@{/cotizar/cotizarInf}">Asesorias Aduaneras y cotizaciones |</a>
-                    <a class="nav-link colorBtn font2" th:href="@{/cotizar/cotizarInf}">Informacion cotizar|</a>
+                    <a class="nav-link colorBtn font2" th:href="@{/asesoria/informacionTransportes}">Informacion cotizar|</a>
                     <a class="nav-link colorBtn font2" th:href="@{/usuario/loginUsuario}">Login |</a>
               </div>
 
@@ -38,58 +38,45 @@
                   </div>
                 </nav>
         </br></br></br></br></br>
-    <center><p class="font2"> Datos de Usuario</p></center>
+    <center><p class="font2"> Retroalimentacion de Usuarios </p></center>
         </br></br>
     <section>
             <div class="container">
 
               <div class="row">
                   <div class="col-sm-8 col-md-8 col-lg-8 col-xl-8" >
-                      <center><form method="post" enctype="multipart/form-data">
-                          <div class="mb-3" style="width: 35rem">
-                                <label for="exampleInputEmail1" class="form-label">Nombre</label>
-                                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                          <div id="emailHelp" class="form-text"></div>
-                          </div>
-                          <div class="mb-3" style="width: 35rem">
-                                <label for="exampleInputEmail1" class="form-label">Apellidos</label>
-                                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                          <div id="emailHelp" class="form-text"></div>
-                          </div>
-                          <div class="mb-3" style="width: 35rem">
-                                <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-                                <input type="password" class="form-control" id="exampleInputPassword1">
-                          </div>
-                          <div class="mb-3" style="width: 35rem">
-                                <label for="exampleInputPassword1" class="form-label">Ingresa nuevamente la contraseña</label>
-                                <input type="password" class="form-control" id="exampleInputPassword1">
-                          </div>
-                          <div class="mb-3" style="width: 35rem">
-                                <label for="exampleInputEmail1" class="form-label">Digite la ciudad</label>
-                                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                           <div id="emailHelp" class="form-text"></div>
-                           </div>
-                           <div class="mb-3" style="width: 35rem">
-                                <label for="exampleInputEmail1" class="form-label">Digite El codigo postal</label>
-                                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                          <div id="emailHelp" class="form-text"></div>
-                          </div>
-                          </br></br>
-                              <button type="submit" class="btn btn-primary">Registrarse</button>
+                      <center><form
+                              th:action="@{/usuario/guardarInfo}"
+                              method="post" 
+                              th:object="${usuario}">
+                             <div class="mb-3">
+                                  <label for="nombre" class="form-label">Nombre</label>
+                                  <input type="text" class="form-control"  placeholder="Karo.." name="nombre" th:field="*{nombre}">
+                            </div>
+                            <div class="mb-3">
+                                  <label for="apellidos" class="form-label">Apellidos</label>
+                                  <input type="text" name="apellidos" class="form-control" placeholder="Barrantes..." th:field="*{apellidos}">
+                            </div>
+                            <div class="mb-3">
+                                  <label for="email" class="form-label">Correo electronico</label>
+                                  <input type="email" name="email" class="form-control" placeholder="name@example.com" th:field="*{email}">
+                            </div> 
+                              
+                            <div class="mb-3">
+                                  <label for="texto" class="form-label">Ejemplo en area de texto..</label>
+                                  <textarea class="form-control" name="texto" rows="3" th:field="*{texto}"></textarea>
+                            </div> 
+                            <div class="modal-footer">
+                                <button class="btn btn-primary" type="submit">Guardar</button>
+                            </div>
                       </center></form>
+
+                          
                   </div>
                   <div class=" col-sm-6 col-md-4 col-lg-4 col-xl-4">   
                       <div class="CustomP" id="foto">
                            <img src="/imagenes/noprofil.jpg" class=" mx-auto d-block CustomP" >
                       </div> 
-                          <div class="roundC">
-                              </br>
-                              <center><input type="file"></center>
-                              <script>
-                                
-                                         
-                              </script>
-                          </div>
                  </div>
             </div>
     </section>
