--- a/src/main/resources/templates/usuario/loginUsuario.html
+++ b/src/main/resources/templates/usuario/loginUsuario.html
@@ -37,33 +37,17 @@
           <center><p class="font2"> Datos de Usuario</p></center>
            </br></br>
            <section>
-               <div class="container" style="width: 500px" >
-                  <center><form>
-                    <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Correo electronico</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                       <div id="emailHelp" class="form-text"></div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1">
-                    </div></br>
-                        <a th:href="@{/usuario/loginUsuario}" class="btn btn-primary">Ingresar</a></br></br>
-                        <a th:href="@{/usuario/formularioRegistroUsuario}" class="btn btn-danger">Crear un Usuario Nuevo</a>
-                  </form></center> 
-              </div>
-              </br></br></br></br></br>
              <div class="container-xl ">
                       <div class="row">
                         <div class="col-sm-8 col-md-4 col-lg-4 col-xl-4" >
                             </br>
                               <center><div class=" card shadow-lg p-3 mb-5" style="width: 25rem;">
-                                  <img src="/imagenes/CN.png" class="card-img-top rounded" alt="...">
-                                  
+                                  <img src="/imagenes/cotizaciones.jpg" class="card-img-top rounded" alt="...">
+                               
                                   <div class="card-body">
-                                    <h5 class="card-title">CN</h5>
-                                    <p class="card-text">A Leading North American Transportation and Logistics Company.</p>
-                                    <a href="https://www.cn.ca/en/" class="btn btn-danger">CN sitio web</a>
+                                    <h5 class="card-title">Cotizaciones</h5>
+                                    <p class="card-text">Cotizaciones de diferentes provedores.</p>
+                                    <a href="/cotizar/cotizarInf" class="btn btn-danger">Cotizar</a>
                                   </div>
                               </div></center> 
                             </br>
@@ -71,11 +55,11 @@
                         <div class="col-sm-8 col-md-4 col-lg-4 col-xl-4">
                             </br>
                               <center><div class="card " style="width: 25rem;">
-                                  <img src="/imagenes/UPS.jpg" class="card-img-top rounded" alt="...">
+                                  <img src="/imagenes/cotiza3.jpg" class="card-img-top rounded" alt="...">
                                   <div class="card-body">
-                                    <h5 class="card-title">United Parcel Service </h5>
-                                    <p class="card-text">Moving our world forward by delivering what matters.</p>
-                                    <a href="https://www.deutschepost.de/sendung/simpleQuery.html?locale=en_GB" class="btn btn-danger">United Parcel Service web</a>
+                                    <h5 class="card-title">Asesorias</h5>
+                                    <p class="card-text">Informacion sobre los servicios que brindamos.</p>
+                                    <a href="/asesoria/informacionTransportes" class="btn btn-danger">Informacion </a>
                                   </div>
                               </div></center>
                             </br>
@@ -83,11 +67,11 @@
                       <div class="col-sm-8 col-md-4 col-lg-4 col-xl-4">
                           </br>
                               <center><div class="card " style="width: 25rem;">
-                                  <img src="/imagenes/Deutsche Post.jpg" class="card-img-top rounded" alt="...">
+                                  <img src="/imagenes/ss.png" class="card-img-top rounded" alt="...">
                                   <div class="card-body">
-                                    <h5 class="card-title">Deutsche Post</h5>
-                                    <p class="card-text">Deutsche Post delivers mail and parcel in Germany and the world. It is an expert provider of dialogue marketing and press distribution services</p>
-                                    <a href="https://www.deutschepost.de/sendung/simpleQuery.html?locale=en_GB" class="btn btn-danger">Deutsche Post web</a>
+                                    <h5 class="card-title">Retroalimentacion</h5>
+                                    <p class="card-text">Por favor nos gustaria saber tu opinion, dejanos tus datos y comentarios para responderte</p>
+                                    <a href="/usuario/Retroalimentacion" class="btn btn-danger">Retroalimentacion</a>
                                   </div>
                               </div></center> 
                           </br>
